# iot-project-web

./: .gitignore  Cargo.toml
src/: config.rs  index.html  main.rs  state.rs
src/route/: mod.rs
src/route/api/: get_data.rs  mod.rs  websocket.rs
